have movie information showing in a pop, including the image

--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,11 @@
     <script src="popup.js"></script>
   </head>
   <body>
-    <p><p><p><p>
+    <h1 id="movie-name"></h1>
+    <h2>Description</h2>
+    <p id="movie-description"></p>
+    <p id="movie-rating"></p>
+    <img id="movie-image">
     <a href="http://www.freepik.com/free-vector/cinema-camera_797114.htm">Logo Designed by Freepik</a>
   </body>
 </html>
