got video to show, added some layout tweaks

--- a/popup.html
+++ b/popup.html
@@ -3,14 +3,24 @@
   <head>
     <title>Man's Best Friend</title>
     <script src="popup.js"></script>
+
+    <script type="text/css">
+
+    </script>
   </head>
-  <body>
+  <body width="1000">
     <h1 id="movie-name"></h1>
-    <h2>Description</h2>
-    <p id="movie-description"></p>
-    <p id="movie-rating"></p>
-    <img id="movie-image">
-    <a href="http://www.freepik.com/free-vector/cinema-camera_797114.htm">Logo Designed by Freepik</a>
+    <table><tr><td valign="top">
+    	<h2>Description</h2>
+	    <p id="movie-description"></p>
+    	<h3 id="movie-rating"></h3>
+	</td><td>
+	    <img id="movie-image" height="330px" width="auto">
+	</td></tr></table>
+    <!-- <a href="http://www.freepik.com/free-vector/cinema-camera_797114.htm">Logo Designed by Freepik</a> -->
+    <a href="#" tabindex="-1">Watch the Trailer</a>
+    <iframe id="youtube-trailer" width="420" height="315" src="https://www.youtube.com/embed/CcsUYu0PVxY" frameborder="0" allowfullscreen></iframe>
+    <a href="#" tabindex="-1">Something Else</a>
   </body>
 </html>
 
