added more styling to the app so it looks a littl better now

--- a/popup.html
+++ b/popup.html
@@ -3,22 +3,29 @@
   <head>
     <title>Man's Best Friend</title>
     <script src="popup.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css" />
 
-    <script type="text/css">
 
-    </script>
   </head>
-  <body width="1000">
+  <body>
+
     <h1 id="movie-name"></h1>
-    <table><tr><td valign="top">
-    	<h2>Description</h2>
-	    <p id="movie-description"></p>
-    	<h3 id="movie-rating"></h3>
-	</td><td>
-	    <img id="movie-image" height="330px" width="auto">
-	</td></tr></table>
-    <!-- <a href="http://www.freepik.com/free-vector/cinema-camera_797114.htm">Logo Designed by Freepik</a> -->
+    <table>
+      <tr>
+        <td valign="top">
+          <h2>Description</h2>
+          <p id="movie-description"></p>
+          <h3 id="movie-rating"></h3>
+        </td><td>
+          <img id="movie-image" height="330px" width="auto">
+        </td>
+      </tr>
+    </table>
+
+    <p></p>
+
     <iframe id="youtube-trailer" width="420" height="315" src="https://www.youtube.com/embed/CcsUYu0PVxY" frameborder="0" allowfullscreen></iframe>
+
   </body>
 </html>
 
